--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon server",
+    "server": "nodemon server",
     "start": "node server.js"
   },
   "repository": {
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/Code-KHJ/recruit-sw#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "mogoose": "^0.0.1-security",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
   }
