--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   }
 }
