--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/Code-KHJ/recruit-sw#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
-    "serve-static": "^1.15.0"
+    "nodemon": "^2.0.20"
   }
 }
