--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
