--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nunjucks": "^3.2.3",
+    "redis": "^4.6.5"
   }
 }
