--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
     "redis": "^4.6.5"
+  },
+  "devDependencies": {
+    "nunjucks-date-filter": "^0.1.1"
   }
 }
