--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3'
 services:
   backend:
-    build: ./
+    build: .
     ports:
       - 3000:3000
     depends_on:
       - database
+      - redis
   database:
-    build: ./
+    build:
+      context: .
+      dockerfile: Dockerfile.DB
     ports:
       - 3307:3307
   redis:
-    image: redis
+    build: 
+      context: ./redis
+      dockerfile: Dockerfile.redis
     ports:
       - 6379:6379
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    restart: always
-    command: redis-server /usr/local/etc/redis/redis.conf
-  
