--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "hangul-js": "^0.2.6",
@@ -33,6 +34,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.9.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
     "redis": "^4.6.5"
