--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nunjucks-date-filter": "^0.1.1"
